{
    "name": "Controls",
    "maps": [
        {
            "name": "Girl_Controls",
            "id": "6669813e-6b48-4899-9d50-7c6e3b36e46c",
            "actions": [
                {
                    "name": "Horizontal",
                    "type": "Value",
                    "id": "d459fcfa-9a0f-4dce-9c28-44c575fb95c7",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "9e74e0df-55dc-45b1-9338-9ac65b2bb0d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "97fbca63-20da-4099-90fb-1523f4cef116",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d6da105d-2b0e-421e-b639-ba18b757e56c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "54ad8ca2-da9b-4b7c-95f4-818d29e7cc52",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "521f4b74-04ac-4691-b3dc-4dbcfd2bff37",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Cat_Controls",
            "id": "23b4ee43-446c-4b1c-8f47-ea76dd95aa76",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "cf1391b8-2bf0-4fe5-a3ec-ac8716d2ce3b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "f5ca8bc9-ba7c-475e-b7da-0e43e7f138b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f247491a-63df-49d1-8662-c75acf2b3978",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "1058f953-4b70-4d3b-bef4-1c8e5422595a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f5dbadb1-afde-4045-980e-91e23f643ed8",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "58fb5752-72e3-4d2c-8c7c-f72c6c5aa6f8",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}